--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -4,10 +4,11 @@
     border-right: 1px solid #dee2e6;
     padding: 20px;
     height: 100vh;
-    position: fixed;
+    /* position: fixed;
     top: 0;
     left: 0;
-    z-index: 10;
+    z-index: 10; */
+    position: left;
   }
   
   .sidebar h2 {
