--- a/src/components/ProductList.css
+++ b/src/components/ProductList.css
@@ -105,7 +105,28 @@
   color: white;
   border: none;
   padding: 5px 10px;
-  margin-right: 10px; /* Adiciona margem entre os botões */
+  margin-right: 10px;
   cursor: pointer;
   border-radius: 5px;
+}
+
+.loading-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+}
+
+.loading-container svg {
+  margin-bottom: 10px;
+}
+
+.no-products-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  font-size: 1.2em;
+  color: #777;
 }
